# foldl-statistics

./: .travis.yml  .travis.yml.bak  CHANGELOG.md  LICENSE  README.md  foldl-statistics.cabal  stack-7.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
bench/: Main.hs
src/Control/Foldl/: Statistics.hs
test/: Spec.hs
