name:                foldl-statistics
version:             0.1.0.0
synopsis:            Statistical functions from the statistics package implemented as
                     Folds from the foldl package
description:         The use of this package allows statistics to be computed using at most two
                     passes over the input data, one to compute a mean and one to compute a further
                     statistic such as variance and /n/th central moments. All algorithms are the
                     obvious implementation of Brian O\'Sullivan\'s
                     <https://hackage.haskell.org/package/statistics statistics> package imeplemented
                     as `Fold's from the
                     <https://hackage.haskell.org/package/foldl foldl> package.
homepage:            http://github.com/Axman6/foldl-statistics#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Mason
maintainer:          alex.mason@data61.csiro.au
copyright:           2016 National ICT Australia (NICTA)
category:            Math, Statistics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Foldl.Statistics
  build-depends:       base >= 4.7 && < 5
                       , foldl >= 1.1 && < 1.2
                       , math-functions >= 0.1 && < 0.2
                       , profunctors >= 5.2 && < 5.3
  default-language:    Haskell2010

test-suite foldl-statistics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , foldl-statistics
                     , foldl >= 1.1 && < 1.2
                     , statistics >= 0.13 && < 0.14
                     , tasty >= 0.11 && < 0.12
                     , tasty-quickcheck >= 0.8 && < 0.9
                     , vector >= 0.11 && < 0.12
                     , quickcheck-instances >= 0.3 && < 0.4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NICTA/foldl-statistics
