name:                foldl-statistics
version:             0.1.1.0
synopsis:            Statistical functions from the statistics package implemented as
                     Folds.
description:         The use of this package allows statistics to be computed using at most two
                     passes over the input data, one to compute a mean and one to compute a further
                     statistic such as variance and /n/th central moments. All algorithms are the
                     obvious implementation of Bryan O\'Sullivan\'s
                     <https://hackage.haskell.org/package/statistics statistics> package imeplemented
                     as `Fold's from the
                     <https://hackage.haskell.org/package/foldl foldl> package.
homepage:            http://github.com/Data61/foldl-statistics#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Mason
maintainer:          Alex.Mason@data61.csiro.au
copyright:           2016 Data61 (CSIRO)
category:            Math, Statistics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Foldl.Statistics
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , foldl >= 1.1 && < 1.3
                       , math-functions >= 0.1 && < 0.3
                       , profunctors >= 5.2 && < 5.3

test-suite foldl-statistics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5.0
                     , foldl-statistics
                     , foldl >= 1.1 && < 1.3
                     , statistics >= 0.13 && < 0.14
                     , tasty >= 0.11 && < 0.12
                     , tasty-quickcheck >= 0.8 && < 0.9
                     , vector >= 0.11 && < 0.12
                     , quickcheck-instances >= 0.3 && < 0.4
                     , profunctors >= 5.2 && < 5.3

Benchmark bench-folds
    type:       exitcode-stdio-1.0
    hs-source-dirs:      bench
    main-is:             Main.hs
    default-language:    Haskell2010
    build-depends: base
                  , foldl-statistics
                  , criterion       >= 1.1 && < 1.2
                  , vector
                  , statistics
                  , mwc-random      >= 0.13 && < 0.14
                  , foldl

source-repository head
  type:     git
  location: https://github.com/Data61/foldl-statistics
